--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,38 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
 
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+  --background-color: #01002a;
+  --primary-color: #fed700;
+  --hr-color: #c4c4c4;
+  --font-family: "Roboto", sans-serif;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  color: white;
+  background-color: var(--background-color);
+  font-family: var(--font-family);
+}
+
+button {
+  font-family: var(--font-family);
+}
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 0.2rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 1rem;
 }
